--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>KushBlog</title>
+  <title>KushTeam.dev</title>
   <base href="/">
+  <meta http-equiv="Content-Language" content="en" />
+  <meta name="keywords" content="tailwindcss, GraphQL, Angular, HTMl, CSS" />
+  <meta name="description" content="Kush team dev playground" />
+  <meta name="distribution" content="global" />
+  <meta name="robots" content="all" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/tailwindcss@1.9.6/dist/tailwind.min.css">
