--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>KushTeam.dev</title>
   <base href="/">
+  <link rel="manifest" href="manifest.json" crossorigin="anonymous"/>
   <meta http-equiv="Content-Language" content="en" />
   <meta name="keywords" content="tailwindcss, GraphQL, Angular, HTMl, CSS" />
   <meta name="description" content="Kush team dev playground" />
@@ -12,6 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/tailwindcss@1.9.6/dist/tailwind.min.css">
+  
 </head>
 <body>
   <app-root></app-root>
