--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,15 @@
   <meta charset="utf-8">
   <title>KushTeam.dev</title>
   <base href="/">
-  <link rel="manifest" href="manifest.json" crossorigin="anonymous"/>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#603cba">
+  <meta name="theme-color" content="#553c9a">
+
   <meta http-equiv="Content-Language" content="en" />
   <meta name="keywords" content="tailwindcss, GraphQL, Angular, HTMl, CSS" />
   <meta name="description" content="Kush team dev playground" />
