--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,12 @@
   <meta name="robots" content="all" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="https://unpkg.com/tailwindcss@1.9.6/dist/tailwind.min.css">
-  
+  <!-- 2.0 -->
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <!--
+    1.9.6
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/tailwindcss@1.9.6/dist/tailwind.min.css">
+  -->
 </head>
 <body>
   <app-root></app-root>
